# skew_project

./: .gitignore  README.md  main.py  pyproject.toml
src/: containers.py
src/application/constants/: prompts.py
src/application/dtos/: chat_request_dto.py  chat_response_dto.py  chunk_data_dto.py  search_chunk_dto.py  upload_file_dto.py
src/application/graph/: chat_graph.py
src/application/helpers/: chunking_helper.py  text_cleaning_helper.py  text_extraction_helper.py
src/application/use_cases/chat/: chat_use_case.py
src/application/use_cases/knowledge/: file_delete_use_case.py  file_upload_use_case.py  search_chunks_use_case.py
src/domain/abstractions/clients/: abstract_openai_client.py  abstract_qdrant_client.py
src/domain/abstractions/nodes/: abstract_node.py
src/domain/entities/: chat_state_entity.py  chunk_data_entity.py
src/domain/exceptions/: application_exception.py  system_exception.py
src/domain/nodes/: brain_node.py  chat_response_generation_node.py  rag_node.py
src/infrastructure/clients/: openai_client.py  qdrant_client.py
src/infrastructure/config/: constants.py  settings.py
src/presentation/routers/: chat_router.py  knowledge_router.py
